# rzap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  api_builder.rs  data_type.rs  error.rs  lib.rs  tests.rs
src/rzap/: data_type.rs  mod.rs
tests/: tests.rs
