[package]
name = "rzap"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Interface with OpenShock via Rust"
documentation = "https://docs.rs/rzap/latest/rzap/"
homepage = "https://github.com/LostQuasar/rzap"
repository = "https://github.com/LostQuasar/rzap"

[dependencies]
reqwest = { version = "0.11.27" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.26.4"
strum = "0.26.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
dotenv = "0.15.0"
